@@ -2,17 +2,21 @@ package com.evcharging.service;
 
 import com.evcharging.dto.ReservationCreateDTO;
 import com.evcharging.dto.ReservationResponseDTO;
+import com.evcharging.entity.ChargingPoint;
 import com.evcharging.entity.ChargingStation;
 import com.evcharging.entity.EVDriver;
 import com.evcharging.entity.Reservation;
 import com.evcharging.enums.ReservationStatus;
+import com.evcharging.repository.ChargingPointRepository;
 import com.evcharging.repository.ChargingStationRepository;
 import com.evcharging.repository.EVDriverRepository;
 import com.evcharging.repository.ReservationRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ReservationService {
@@ -20,15 +24,67 @@ public class ReservationService {
     private final ReservationRepository reservationRepository;
     private final EVDriverRepository driverRepository;
     private final ChargingStationRepository stationRepository;
-
+    private final ChargingPointRepository chargingPointRepository;
     public ReservationService(ReservationRepository reservationRepository,
                               EVDriverRepository driverRepository,
-                              ChargingStationRepository stationRepository) {
+                              ChargingStationRepository stationRepository,
+                              ChargingPointRepository chargingPointRepository) {
         this.reservationRepository = reservationRepository;
         this.driverRepository = driverRepository;
         this.stationRepository = stationRepository;
+        this.chargingPointRepository=chargingPointRepository;
     }
 
+    @Transactional
+    public ReservationResponseDTO createReservationAutoApprove(Long driverId, ReservationCreateDTO dto) {
+        EVDriver driver = driverRepository.findById(driverId)
+                .orElseThrow(() -> new RuntimeException("Driver not found"));
+
+        ChargingStation station = stationRepository.findById(dto.getStationId())
+                .orElseThrow(() -> new RuntimeException("Station not found"));
+
+        LocalDateTime startTime = dto.getStartTime();
+        LocalDateTime expireTime = startTime.plusMinutes(30);
+
+        List<ChargingPoint> stationPoints = chargingPointRepository.findByStationId(
+                dto.getStationId());
+        List<ChargingPoint> filteredPoints = stationPoints.stream()
+                .filter(p -> p.getConnectorType().equals(dto.getConnectorType()))
+                .collect(Collectors.toList());
+
+        for (ChargingPoint point : stationPoints) {
+            boolean isOccupied = reservationRepository.existsByChargingPointAndStatusInAndTimeOverlap(
+                    point,
+                    List.of(ReservationStatus.CONFIRMED),
+                    startTime,
+                    expireTime
+            );
+
+            if (!isOccupied) {
+                Reservation reservation = new Reservation();
+                reservation.setDriver(driver);
+                reservation.setChargingPoint(point);
+                reservation.setStation(station);
+                reservation.setConnectorType(dto.getConnectorType());
+                reservation.setStartTime(startTime);
+                reservation.setExpireTime(expireTime);
+                reservation.setStatus(ReservationStatus.CONFIRMED);
+
+                Reservation saved = reservationRepository.save(reservation);
+
+                return new ReservationResponseDTO(
+                        saved.getId(),
+                        station.getName(),
+                        saved.getConnectorType(),
+                        saved.getStatus(),
+                        saved.getStartTime(),
+                        saved.getExpireTime()
+                );
+            }
+        }
+
+        throw new RuntimeException("Không còn điểm sạc nào trống tại thời điểm này");
+    }
     @Transactional
     public ReservationResponseDTO createReservation(Long driverId, ReservationCreateDTO dto) {
         EVDriver driver = driverRepository.findById(driverId)
@@ -42,7 +98,7 @@ public class ReservationService {
         reservation.setConnectorType(dto.getConnectorType());
         reservation.setStatus(ReservationStatus.CONFIRMED);
         reservation.setStartTime(dto.getStartTime());
-        reservation.setExpireTime(dto.getStartTime().plusMinutes(15));
+        reservation.setExpireTime(dto.getStartTime().plusMinutes(30));
 
         Reservation saved = reservationRepository.save(reservation);
 
@@ -56,8 +112,9 @@ public class ReservationService {
         );
     }
 
-    public ReservationResponseDTO getReservation(Long id) {
-        Reservation res = reservationRepository.findById(id)
+    public ReservationResponseDTO getReservationDetails(Long driverId) {
+
+        Reservation res = reservationRepository.findById(driverId)
                 .orElseThrow(() -> new RuntimeException("Reservation not found"));
         return new ReservationResponseDTO(
                 res.getId(),
@@ -77,8 +134,12 @@ public class ReservationService {
         reservationRepository.save(res);
     }
 
-    public List<ReservationResponseDTO> getReservationsByDriver(Long driverId) {
-        List<Reservation> reservations = reservationRepository.findByDriverId(driverId);
+    public List<ReservationResponseDTO> getReservationList(Long accountId) {
+        EVDriver driver = driverRepository.findByAccountId(accountId)
+                .orElseThrow(() -> new RuntimeException("Driver not found"));
+
+        List<Reservation> reservations = reservationRepository.findByDriver(driver);
+
         return reservations.stream()
                 .map(res -> new ReservationResponseDTO(
                         res.getId(),
@@ -88,6 +149,7 @@ public class ReservationService {
                         res.getStartTime(),
                         res.getExpireTime()
                 ))
-                .toList();
+                .collect(Collectors.toList());
+
     }
 }
